<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/myleads"
        android:icon="@drawable/baseline_monetization_on_24"
        android:title="@string/myleads"
        android:contentDescription="@string/content_description_mylistings"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/search"
        android:icon="@drawable/baseline_search_24"
        android:title="@string/search"
        android:contentDescription="@string/content_description_search"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/helpcenter"
        android:title="@string/support"
        android:contentDescription="@string/content_description_email_support"
        app:showAsAction="never" />
    <item
        android:id="@+id/Logout"
        android:title="@string/logout"
        android:contentDescription="@string/content_description_logout"
        app:showAsAction="never" />


</menu>