<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/myprofile"
        android:title="@string/myprofile"
        android:contentDescription="@string/content_description_myprofile"
        app:showAsAction="ifRoom"
        android:icon="@drawable/baseline_person_3_24"/>
    <item
        android:id="@+id/helpcenter"
        android:title="@string/support"
        android:contentDescription="@string/content_description_email_support"
        app:showAsAction="never" />
    <item
        android:id="@+id/Logout"
        android:title="@string/logout"
        android:contentDescription="@string/content_description_logout"
        app:showAsAction="never" />

</menu>