<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/potentialbusiness"
        android:enabled="true"
        android:icon="@drawable/baseline_work_24"
        android:title="@string/page_title"
        app:showAsAction="ifRoom"
        
        />
    <item
        android:id="@+id/current_listings"
        android:enabled="true"
        android:icon="@drawable/baseline_view_list_24"
        android:title="@string/page_title1"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/addlisting"
        android:enabled="true"
        android:icon="@drawable/baseline_post_add_24"
        android:title="@string/page_title2"
        app:showAsAction="ifRoom"/>

</menu>