<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".initiateRegistration"

    >

    <TextView
        android:id="@+id/askUserGroupTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registering_as_a_driver"
        android:layout_centerInParent="true"/>

    <RadioGroup
        android:id="@+id/askUserGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/askUserGroupTextView">

        <RadioButton
            android:id="@+id/DriverYes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            android:checked="false"
            android:layout_marginStart="130dp"
            android:layout_marginEnd="50dp"
            />

        <RadioButton
            android:id="@+id/DriverNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no"
            android:checked="false"/>
    </RadioGroup>



</RelativeLayout>